; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_socket_tcp.c_ngx_http_lua_socket_send.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_socket_tcp.c_ngx_http_lua_socket_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_27__ = type { i32, %struct.TYPE_24__* }
%struct.TYPE_24__ = type { i32 }
%struct.TYPE_28__ = type { %struct.TYPE_26__*, i32, i32, i64, i32, %struct.TYPE_25__*, %struct.TYPE_23__ }
%struct.TYPE_26__ = type { i32 }
%struct.TYPE_25__ = type { %struct.TYPE_31__* }
%struct.TYPE_31__ = type { i64, i64 }
%struct.TYPE_23__ = type { %struct.TYPE_30__* }
%struct.TYPE_30__ = type { i64 (%struct.TYPE_30__*, i64, i64)*, i32, %struct.TYPE_22__*, i32 }
%struct.TYPE_22__ = type { i64 }
%struct.TYPE_29__ = type { i32, i32, i32 }

@NGX_LOG_DEBUG_HTTP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"lua tcp socket send data\00", align 1
@ngx_http_lua_module = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_SOCKET_FT_ERROR = common dso_local global i32 0, align 4
@NGX_ERROR = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [33 x i8] c"lua tcp socket sent all the data\00", align 1
@ngx_http_lua_socket_dummy_handler = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i64 0, align 8
@ngx_socket_errno = common dso_local global i32 0, align 4
@ngx_http_lua_socket_send_handler = common dso_local global i32 0, align 4
@NGX_AGAIN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_27__*, %struct.TYPE_28__*)* @ngx_http_lua_socket_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ngx_http_lua_socket_send(%struct.TYPE_27__* %0, %struct.TYPE_28__* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_27__*, align 8
  %5 = alloca %struct.TYPE_28__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_30__*, align 8
  %8 = alloca %struct.TYPE_29__*, align 8
  %9 = alloca %struct.TYPE_31__*, align 8
  store %struct.TYPE_27__* %0, %struct.TYPE_27__** %4, align 8
  store %struct.TYPE_28__* %1, %struct.TYPE_28__** %5, align 8
  %10 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %10, i32 0, i32 6
  %12 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_30__*, %struct.TYPE_30__** %12, align 8
  store %struct.TYPE_30__* %13, %struct.TYPE_30__** %7, align 8
  %14 = load i32, i32* @NGX_LOG_DEBUG_HTTP, align 4
  %15 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %15, i32 0, i32 1
  %17 = load %struct.TYPE_24__*, %struct.TYPE_24__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ngx_log_debug0(i32 %14, i32 %19, i32 0, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %21 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %22 = load i32, i32* @ngx_http_lua_module, align 4
  %23 = call %struct.TYPE_29__* @ngx_http_get_module_ctx(%struct.TYPE_27__* %21, i32 %22)
  store %struct.TYPE_29__* %23, %struct.TYPE_29__** %8, align 8
  %24 = load %struct.TYPE_29__*, %struct.TYPE_29__** %8, align 8
  %25 = icmp eq %struct.TYPE_29__* %24, null
  br i1 %25, label %26, label %32

26:                                               ; preds = %2
  %27 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %28 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %29 = load i32, i32* @NGX_HTTP_LUA_SOCKET_FT_ERROR, align 4
  %30 = call i32 @ngx_http_lua_socket_handle_write_error(%struct.TYPE_27__* %27, %struct.TYPE_28__* %28, i32 %29)
  %31 = load i64, i64* @NGX_ERROR, align 8
  store i64 %31, i64* %3, align 8
  br label %171

32:                                               ; preds = %2
  %33 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %33, i32 0, i32 5
  %35 = load %struct.TYPE_25__*, %struct.TYPE_25__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_31__*, %struct.TYPE_31__** %36, align 8
  store %struct.TYPE_31__* %37, %struct.TYPE_31__** %9, align 8
  br label %38

38:                                               ; preds = %116, %32
  %39 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %39, i32 0, i32 0
  %41 = load i64 (%struct.TYPE_30__*, i64, i64)*, i64 (%struct.TYPE_30__*, i64, i64)** %40, align 8
  %42 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %43 = load %struct.TYPE_31__*, %struct.TYPE_31__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load %struct.TYPE_31__*, %struct.TYPE_31__** %9, align 8
  %47 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = load %struct.TYPE_31__*, %struct.TYPE_31__** %9, align 8
  %50 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %49, i32 0, i32 0
  %51 = load i64, i64* %50, align 8
  %52 = sub nsw i64 %48, %51
  %53 = call i64 %41(%struct.TYPE_30__* %42, i64 %45, i64 %52)
  store i64 %53, i64* %6, align 8
  %54 = load i64, i64* %6, align 8
  %55 = icmp sge i64 %54, 0
  br i1 %55, label %56, label %117

56:                                               ; preds = %38
  %57 = load i64, i64* %6, align 8
  %58 = load %struct.TYPE_31__*, %struct.TYPE_31__** %9, align 8
  %59 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %58, i32 0, i32 0
  %60 = load i64, i64* %59, align 8
  %61 = add nsw i64 %60, %57
  store i64 %61, i64* %59, align 8
  %62 = load %struct.TYPE_31__*, %struct.TYPE_31__** %9, align 8
  %63 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = load %struct.TYPE_31__*, %struct.TYPE_31__** %9, align 8
  %66 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %65, i32 0, i32 1
  %67 = load i64, i64* %66, align 8
  %68 = icmp eq i64 %64, %67
  br i1 %68, label %69, label %116

69:                                               ; preds = %56
  %70 = load i32, i32* @NGX_LOG_DEBUG_HTTP, align 4
  %71 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %72 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %71, i32 0, i32 3
  %73 = load i32, i32* %72, align 8
  %74 = call i32 @ngx_log_debug0(i32 %70, i32 %73, i32 0, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %75 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %76 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %75, i32 0, i32 2
  %77 = load %struct.TYPE_22__*, %struct.TYPE_22__** %76, align 8
  %78 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %77, i32 0, i32 0
  %79 = load i64, i64* %78, align 8
  %80 = icmp ne i64 %79, 0
  br i1 %80, label %81, label %86

81:                                               ; preds = %69
  %82 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %83 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %82, i32 0, i32 2
  %84 = load %struct.TYPE_22__*, %struct.TYPE_22__** %83, align 8
  %85 = call i32 @ngx_del_timer(%struct.TYPE_22__* %84)
  br label %86

86:                                               ; preds = %81, %69
  %87 = load %struct.TYPE_29__*, %struct.TYPE_29__** %8, align 8
  %88 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %87, i32 0, i32 2
  %89 = ptrtoint i32* %88 to i32
  %90 = load %struct.TYPE_29__*, %struct.TYPE_29__** %8, align 8
  %91 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %90, i32 0, i32 1
  %92 = ptrtoint i32* %91 to i32
  %93 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %94 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %93, i32 0, i32 5
  %95 = call i32 (i32, i32, ...) @ngx_chain_update_chains(i32 %89, i32 %92, %struct.TYPE_25__** %94, i32 ptrtoint (i32* @ngx_http_lua_module to i32))
  %96 = load i32, i32* @ngx_http_lua_socket_dummy_handler, align 4
  %97 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %98 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %97, i32 0, i32 2
  store i32 %96, i32* %98, align 4
  %99 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %100 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %99, i32 0, i32 2
  %101 = load %struct.TYPE_22__*, %struct.TYPE_22__** %100, align 8
  %102 = call i64 @ngx_handle_write_event(%struct.TYPE_22__* %101, i32 0)
  %103 = load i64, i64* @NGX_OK, align 8
  %104 = icmp ne i64 %102, %103
  br i1 %104, label %105, label %111

105:                                              ; preds = %86
  %106 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %107 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %108 = load i32, i32* @NGX_HTTP_LUA_SOCKET_FT_ERROR, align 4
  %109 = call i32 @ngx_http_lua_socket_handle_write_error(%struct.TYPE_27__* %106, %struct.TYPE_28__* %107, i32 %108)
  %110 = load i64, i64* @NGX_ERROR, align 8
  store i64 %110, i64* %3, align 8
  br label %171

111:                                              ; preds = %86
  %112 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %113 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %114 = call i32 @ngx_http_lua_socket_handle_write_success(%struct.TYPE_27__* %112, %struct.TYPE_28__* %113)
  %115 = load i64, i64* @NGX_OK, align 8
  store i64 %115, i64* %3, align 8
  br label %171

116:                                              ; preds = %56
  br label %38

117:                                              ; preds = %38
  br label %118

118:                                              ; preds = %117
  %119 = load i64, i64* %6, align 8
  %120 = load i64, i64* @NGX_ERROR, align 8
  %121 = icmp eq i64 %119, %120
  br i1 %121, label %122, label %133

122:                                              ; preds = %118
  %123 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %124 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %123, i32 0, i32 1
  store i32 1, i32* %124, align 8
  %125 = load i32, i32* @ngx_socket_errno, align 4
  %126 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %127 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %126, i32 0, i32 4
  store i32 %125, i32* %127, align 8
  %128 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %129 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %130 = load i32, i32* @NGX_HTTP_LUA_SOCKET_FT_ERROR, align 4
  %131 = call i32 @ngx_http_lua_socket_handle_write_error(%struct.TYPE_27__* %128, %struct.TYPE_28__* %129, i32 %130)
  %132 = load i64, i64* @NGX_ERROR, align 8
  store i64 %132, i64* %3, align 8
  br label %171

133:                                              ; preds = %118
  %134 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %135 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %134, i32 0, i32 3
  %136 = load i64, i64* %135, align 8
  %137 = icmp ne i64 %136, 0
  br i1 %137, label %138, label %141

138:                                              ; preds = %133
  %139 = load %struct.TYPE_29__*, %struct.TYPE_29__** %8, align 8
  %140 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %139, i32 0, i32 0
  store i32 1, i32* %140, align 4
  br label %141

141:                                              ; preds = %138, %133
  %142 = load i32, i32* @ngx_http_lua_socket_send_handler, align 4
  %143 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %144 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %143, i32 0, i32 2
  store i32 %142, i32* %144, align 4
  %145 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %146 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %145, i32 0, i32 2
  %147 = load %struct.TYPE_22__*, %struct.TYPE_22__** %146, align 8
  %148 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %149 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %148, i32 0, i32 1
  %150 = load i32, i32* %149, align 8
  %151 = call i32 @ngx_add_timer(%struct.TYPE_22__* %147, i32 %150)
  %152 = load %struct.TYPE_30__*, %struct.TYPE_30__** %7, align 8
  %153 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %152, i32 0, i32 2
  %154 = load %struct.TYPE_22__*, %struct.TYPE_22__** %153, align 8
  %155 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %156 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %155, i32 0, i32 0
  %157 = load %struct.TYPE_26__*, %struct.TYPE_26__** %156, align 8
  %158 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %157, i32 0, i32 0
  %159 = load i32, i32* %158, align 4
  %160 = call i64 @ngx_handle_write_event(%struct.TYPE_22__* %154, i32 %159)
  %161 = load i64, i64* @NGX_OK, align 8
  %162 = icmp ne i64 %160, %161
  br i1 %162, label %163, label %169

163:                                              ; preds = %141
  %164 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %165 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %166 = load i32, i32* @NGX_HTTP_LUA_SOCKET_FT_ERROR, align 4
  %167 = call i32 @ngx_http_lua_socket_handle_write_error(%struct.TYPE_27__* %164, %struct.TYPE_28__* %165, i32 %166)
  %168 = load i64, i64* @NGX_ERROR, align 8
  store i64 %168, i64* %3, align 8
  br label %171

169:                                              ; preds = %141
  %170 = load i64, i64* @NGX_AGAIN, align 8
  store i64 %170, i64* %3, align 8
  br label %171

171:                                              ; preds = %169, %163, %122, %111, %105, %26
  %172 = load i64, i64* %3, align 8
  ret i64 %172
}

declare dso_local i32 @ngx_log_debug0(i32, i32, i32, i8*) #1

declare dso_local %struct.TYPE_29__* @ngx_http_get_module_ctx(%struct.TYPE_27__*, i32) #1

declare dso_local i32 @ngx_http_lua_socket_handle_write_error(%struct.TYPE_27__*, %struct.TYPE_28__*, i32) #1

declare dso_local i32 @ngx_del_timer(%struct.TYPE_22__*) #1

declare dso_local i32 @ngx_chain_update_chains(i32, i32, ...) #1

declare dso_local i64 @ngx_handle_write_event(%struct.TYPE_22__*, i32) #1

declare dso_local i32 @ngx_http_lua_socket_handle_write_success(%struct.TYPE_27__*, %struct.TYPE_28__*) #1

declare dso_local i32 @ngx_add_timer(%struct.TYPE_22__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
